--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
+        applicationId "com.sue.simplerequestphotodemo"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -22,5 +23,9 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+
+    implementation project(':SimpleRequestPhoto')
 }
